tests/NormalTests/paczka1/small_fuzzy/53106279.err
Error in line 6: Dd71IE5FMhO S539 34,4
Error in line 9: Dd71IE5FMhO A846 32,1
Error in line 3: x8jNY8q A846 50,7
Error in line 11: H6vYa S329 1,1
